<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/content_bg_color"
     >

    <include layout="@layout/activity_title" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:textColor="@color/lab_text_color"
        android:text="@string/subinfo" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" >

        <Button
            android:id="@+id/exit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exit" />

        <Button
            android:id="@+id/back_list"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back_list" />
    </LinearLayout>

</LinearLayout>